This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

28-Jul-2004 (Lars Duening)  (3.3.581)
  - (call_out.c) When printing the uid for an object with an error, make
       sure that there is an uid to print (reported by Bardioc).
  - (mudlib/crashleak.c) Donated by Menaures: a modification of the crasher
       object, looking for memory leaks (Bug #0000102).

25-Jul-2004 (Lars Duening)  (3.3.580)
  - (interpret.c) If the struct lookup operator receives arguments of
       the wrong type, it just throws an error instead of crashing the
       driver, as this can happen with careless funcall(#'->)s (Bug #0000097).
  - (efuns.c) to_array('symbol) crashed the driver because it tried to
       free the symbol as a string (Bug #0000097).
  - (interpret.c) The trace collection into an array now uses unlimited
       arrays, otherwise a too-small limit would cause the driver
       to enter an endless error loop (Bug #0000097).
  - (object, gcollect.c) If a save_{object,value} failed and thus
       left a pointer table behind, a following GC would free the table
       without resetting the pointer. The next save_{object, value} would
       then use the freed memory (Bug #0000097).

25-Jul-2004 (Lars Duening)  (3.3.579)
  - (xerq/erq.c) If select() in the main loop was interrupted by a signal,
       the ERQ still proceeded to evaluate the fd-sets.
  - (xerq/execute.c) The debug logging of the execute parameters didn't
       work.
  - (comm.c) If an ERQ callback function accepts an array, the numbers
       are now all passed on positive (range 0..255).

24-Jul-2004 (Lars Duening)  (3.3.578)
  - (xerq/defs.h) ERQ_DEBUG level wasn't properly translated into
       debug output.
  - (xerq/socket.c) Added a few level 2 diagnostics.
  - (interpret.c) Removed two left-over DEBUG diagnostics (reported
       by Bardioc).