@@ -60,18 +60,16 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 581)
-(Parent-Version lpmud 3-3 580)
+(Project-Version lpmud 3-3 582)
+(Parent-Version lpmud 3-3 581)
 (Version-Log "
-  - (call_out.c) When printing the uid for an object with an error, make
-       sure that there is an uid to print (reported by Bardioc).
-  - (mudlib/crashleak.c) Donated by Menaures: a modification of the crasher
-       object, looking for memory leaks.
+  - (lex.c) The macros __FLOAT_MIN__ and __FLOAT_MAX__ now reflect
+       the limits for 'double' floats (Bug #0000101).
 ")
 (New-Version-Log 
 ""
 )
-(Checkin-Time "Wed, 28 Jul 2004 23:26:14 -0600")
+(Checkin-Time "Thu, 29 Jul 2004 22:01:29 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -109,8 +107,8 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.11 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.78 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.644 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.369 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.645 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.370 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
@@ -131,7 +129,7 @@
   (src/settings/compat (lpmud/c/10_compat 1.7 744))
   (src/settings/alatia (lpmud/j/27_alatia 1.5 744))
   (src/settings/aoh (lpmud/q/10_aoh 1.5 744))
-  (src/settings/avalon (lpmud/d/9_avalon 1.3.1.2.1.15 744))
+  (src/settings/avalon (lpmud/d/9_avalon 1.3.1.2.1.16 744))
   (src/settings/bat (lpmud/q/5_bat 1.5 644))
   (src/settings/beutelland (lpmud/n/34_beutelland 1.3 744))
   (src/settings/carledon (lpmud/c/24_carledon 1.3.1.4 744))
@@ -199,9 +197,9 @@
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.9 644))
   (src/i-svalue_cmp.h (lpmud/a/b/20_i-svalue_c 1.4 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.39 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.65 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.66 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.9 644))
-  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.68 644))
+  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.69 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.17 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.60 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.20 644))
