@@ -3047,7 +3047,7 @@ get_string_r_item (svalue_t * svp, svalue_t * i, Bool make_singular
         {
             if (!allow_one_past)
             {
-                ERRORF(("Index out for [] of bounds: %ld, string length: %ld.\n"
+                ERRORF(("Index out for [<] of bounds: %ld, string length: %ld.\n"
                        , (long)ind, (long)mstrsize(svp->u.str)));
                 return NULL;
             }
@@ -3121,7 +3121,7 @@ get_string_a_item (svalue_t * svp, svalue_t * i, Bool make_singular
         {
             if (!allow_one_past)
             {
-                ERRORF(("Index out for [] of bounds: %ld, string length: %ld.\n"
+                ERRORF(("Index out for [>] of bounds: %ld, string length: %ld.\n"
                        , (long)ind, (long)mstrsize(svp->u.str)));
                 return NULL;
             }
